k8s/network-policies/notification-service-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-policy
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ticket-service
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: rabbitmq
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 3004
